fix css for buttons
avoid that loading button is too small in height while showing the
spinner

--- a/css/styles.css
+++ b/css/styles.css
@@ -2753,8 +2753,13 @@ input[type="search"] {
     background-color: #a0bd3a
 }
 
+.studio-ext-addons-results-list .options .button {
+    min-height: 25px;
+    box-sizing: border-box;
+}
+
 .studio-ext-addons-results-list .options .install:hover {
-    background-color: #c6d984
+    background-color: #c6d984;
 }
 
 .studio-ext-addons-results-list .options .success {
@@ -2762,33 +2767,33 @@ input[type="search"] {
     border: 1px solid #a0bd3a;
     color: #a0bd3a;
     background-color: transparent;
-    cursor: default
+    cursor: default;
 }
 
 .studio-ext-addons-results-list .options .error {
     min-width: 8rem;
     background-color: #e74c3c;
-    border: 1px solid #e74c3c
+    border: 1px solid #e74c3c;
 }
 
 .studio-ext-addons-results-list .options .error:hover {
-    background-color: #f29f97
+    background-color: #f29f97;
 }
 
 .studio-ext-addons-results-list .options .restart {
     min-width: 8rem;
     background-color: #e74c3c;
-    border: 1px solid #e74c3c
+    border: 1px solid #e74c3c;
 }
 
 .studio-ext-addons-results-list .options .restart:hover {
-    background-color: #f29f97
+    background-color: #f29f97;
 }
 
 .studio-ext-addons-results-list .options .update {
     min-width: 8rem;
     background-color: #f39c12;
-    border: 1px solid #f39c12
+    border: 1px solid #f39c12;
 }
 
 .studio-ext-addons-results-list .options .update:hover {
@@ -2799,8 +2804,9 @@ input[type="search"] {
     background-image: url(../img/spinner.gif);
     background-position: 50% 50%;
     background-repeat: no-repeat;
+    background-size: auto 25px;
     min-width: 8rem;
-    border: 1px solid #a0bd3a;
+    border: none;
     background-color: #a0bd3a;
 }
 
